--- a/public/views/index.html
+++ b/public/views/index.html
@@ -16,7 +16,7 @@
     }
 </style>
 
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 <body ng-app="raceController">
 
 <div ng-controller="racesController">
