--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Добавить расу</title>
+    <title>Персонаж</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -10,81 +10,72 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 </head>
 
-<body ng-app="raceController">
-<div ng-controller="racesController">
+<body ng-app="personageManagerApp">
+<div ng-controller="personageListController">
 
     <table class="table table-striped">
-        <tr ng-repeat="race in races | orderBy : 'id'">
-            <td>{{ race.id }}</td>
-            <td>{{ race.name }}</td>
-            <td>{{ race.max_age }}</td>
-            <td><button type="button" class="btn btn-link" ng-click="deleteRace(race.id)">Удалить</button></td>
+        <tr ng-repeat="personage in personages | orderBy : 'id'">
+            <td style="vertical-align:middle;">{{ personage.id }}</td>
+            <td style="vertical-align:middle;">{{ personage.name }}</td>
+            <td style="vertical-align:middle;">{{ personage.age }}</td>
+            <td style="vertical-align:middle;">{{ personage.experience }}</td>
+            <td><button type="button" class="btn btn-link" ng-click="deletePersonage(personage.id)">Удалить</button></td>
         </tr>
     </table>
 </div>
 
 <div class="container">
-    <h2>Добавить расу</h2>
-    <form class="form-horizontal" role="form" ng-controller="addRaceController"
-          name="createRaceForm">
+    <h2>Добавить персонажа</h2>
+    <form class="form-horizontal" role="form" ng-controller="addPersonageController"
+          name="createPersonageForm">
         <div class="form-group">
-            <label class="control-label col-sm-2" for="race_name">Название расы:</label>
+            <label class="control-label col-sm-2" for="name">Имя:</label>
             <div class="col-sm-10">
-                <input type="text" ng-model="race_name" class="form-control" id="race_name" placeholder="Человек" required>
+                <input type="text" ng-model="name" class="form-control" id="name" placeholder="Шмублон" required>
             </div>
         </div>
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="max_age">Максимальный возраст:</label>
-            <div class="col-sm-10">
-                <input type="number" class="form-control" id="max_age" placeholder="150" ng-model="max_age" min="0" required>
-            </div>
-        </div>
+
+
+
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default" ng-click="createRace()"
-                        ng-disabled="createRaceForm.$invalid">Добавить</button>
+                <button type="submit" class="btn btn-default" ng-click="createPersonage()"
+                        ng-disabled="createPersonageForm.$invalid">Добавить</button>
             </div>
         </div>
     </form>
 </div>
 
 <script>
-    var app = angular.module("raceController", []);
+    var app = angular.module("personageManagerApp", []);
 
-    app.controller("addRaceController", function ($scope, $http) {
-        $scope.createRace = function () {
-            $http.post('/races', {name: $scope.race_name, max_age: $scope.max_age}).
+    app.controller("addPersonageController", function ($scope, $http) {
+        $scope.createPersonage = function () {
+            $http.post('/personages', {name: $scope.name}).
             success(function (data) {
                 location.reload();
             });
         };
-    });
 
-    app.controller("racesController", function ($scope, $http) {
         $http.get('/races').
         success(function (data) {
             $scope.races = data.races;
         });
+    });
 
-        $scope.deleteRace = function (id) {
-            $http.delete('/races/' + id).
+    app.controller("personageListController", function ($scope, $http) {
+        $http.get('/personages').
+        success(function (data) {
+            $scope.personages = data.personages;
+        });
+
+        $scope.deletePersonage = function (id) {
+            $http.delete('/personages/' + id).
             success(function (data) {
                 location.reload();
             });
         };
     });
-
-    app.directive('toNumber', function () {
-        return {
-            require: 'ngModel',
-            link: function (scope, elem, attrs, ctrl) {
-                ctrl.$parsers.push(function (value) {
-                    return parseFloat(value || '');
-                });
-            }
-        };
-    });
-
 
 </script>
 
