--- a/public/views/race_manager.html
+++ b/public/views/race_manager.html
@@ -14,12 +14,12 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Персонажи</a>
+            <a class="navbar-brand" href="/">Эрилон</a>
         </div>
         <ul class="nav navbar-nav">
             <li class="active"><a href="/views/race_manager.html">Расы</a></li>
             <li><a href="/views/attribute_manager.html">Аттрибуты</a></li>
-            <li><a href="#">Персонажи</a></li>
+            <li><a href="/">Персонажи</a></li>
         </ul>
     </div>
 </nav>
