--- a/public/views/race.html
+++ b/public/views/race.html
@@ -13,17 +13,17 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Персонажи</a>
+            <a class="navbar-brand" href="/">Эрилон</a>
         </div>
         <ul class="nav navbar-nav">
             <li><a href="/views/race_manager.html">Расы</a></li>
             <li><a href="/views/attribute_manager.html">Аттрибуты</a></li>
-            <li><a href="#">Персонажи</a></li>
+            <li><a href="/">Персонажи</a></li>
         </ul>
     </div>
 </nav>
 <div ng-controller="raceAttributeListController">
-    <h2>Раса {{race.name}}</h2>
+    <h3 class="text-center">{{race.name}}</h3>
     <table class="table table-striped">
         <tr ng-repeat="raceAttribute in raceAttributes | orderBy : 'id'">
             <td style="vertical-align:middle;">{{ raceAttribute.id }}</td>
