personage page markup started

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -114,6 +114,7 @@
                             value: 1
                         });
                     }
+                    location.reload();
                 });
             });
         };
