--- a/public/views/attribute_manager.html
+++ b/public/views/attribute_manager.html
@@ -11,18 +11,7 @@
 </head>
 
 <body ng-app="attributeManagerApp">
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">Эрилон</a>
-        </div>
-        <ul class="nav navbar-nav">
-            <li><a href="/views/race_manager.html">Расы</a></li>
-            <li class="active"><a href="/views/attribute_manager.html">Аттрибуты</a></li>
-            <li><a href="/">Персонажи</a></li>
-        </ul>
-    </div>
-</nav>
+<div data-ng-include data-src="'main-menu.html'"></div>
 <div ng-controller="attributeListController">
 
     <table class="table table-striped">
