--- a/public/views/personage.html
+++ b/public/views/personage.html
@@ -10,20 +10,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 </head>
 <body ng-app="personageApp">
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">Эрилон</a>
-        </div>
-        <ul class="nav navbar-nav">
-            <li><a href="/views/race_manager.html">Расы</a></li>
-            <li><a href="/views/attribute_manager.html">Аттрибуты</a></li>
-            <li><a href="/">Персонажи</a></li>
-        </ul>
-    </div>
-</nav>
 
 <div ng-controller="personageAttributeListController">
+    <div data-ng-include data-src="'main-menu.html'"></div>
     <h3 class="text-center">{{personage.name}}</h3>
 
     <div>
