--- a/public/views/race.html
+++ b/public/views/race.html
@@ -10,18 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 </head>
 <body ng-app="raceApp">
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">Эрилон</a>
-        </div>
-        <ul class="nav navbar-nav">
-            <li><a href="/views/race_manager.html">Расы</a></li>
-            <li><a href="/views/attribute_manager.html">Аттрибуты</a></li>
-            <li><a href="/">Персонажи</a></li>
-        </ul>
-    </div>
-</nav>
+<div data-ng-include data-src="'main-menu.html'"></div>
 <div ng-controller="raceAttributeListController">
     <h3 class="text-center">{{race.name}}</h3>
     <table class="table table-striped">
