added accordion menu on personage page

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body ng-app="personageManagerApp">
-<div data-ng-include data-src="'main-menu.html'"></div>
+<div data-ng-include data-src="'views/main-menu.html'"></div>
 <div ng-controller="personageListController">
 
     <table class="table table-striped">
