improve markup on personage page

--- a/public/views/personage.html
+++ b/public/views/personage.html
@@ -19,11 +19,14 @@
         <div class="panel-group" id="accordion">
 
             <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#attributes">Характеристики</a>
-                    </h4>
-                </div>
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#attributes">
+                        <div class="panel-heading">
+                            Характеристики
+                        </div>
+                    </a>
+                </h4>
+
                 <div id="attributes" class="panel-collapse collapse in">
                     <div class="panel-body">
                         <table class="table table-striped">
@@ -37,11 +40,13 @@
             </div>
 
             <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#skills">Навыки</a>
-                    </h4>
-                </div>
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#skills">
+                        <div class="panel-heading">
+                            Навыки
+                        </div>
+                    </a>
+                </h4>
                 <div id="skills" class="panel-collapse collapse">
                     <div class="panel-body">
                         Здесь пробовать варики с навыками
@@ -49,12 +54,14 @@
                             <div class="panel-group" id="skillsAccordeon">
 
                                 <div class="panel panel-default">
-                                    <div class="panel-heading">
-                                        <h4 class="panel-title">
-                                            <a data-toggle="collapse" data-parent="#skillsAccordeon" href="#attached">Прикрепленные</a>
-                                        </h4>
-                                    </div>
-                                    <div id="attached" class="panel-collapse collapse in">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" data-parent="#skillsAccordeon" href="#attached">
+                                            <div class="panel-heading">
+                                                Прикрепленные
+                                            </div>
+                                        </a>
+                                    </h4>
+                                    <div id="attached" class="panel-collapse collapse">
                                         <div class="panel-body">
                                             <table class="table table-striped">
                                                 <tr ng-repeat="personageAttribute in personageAttributes | orderBy : 'id'">
@@ -71,11 +78,13 @@
                                 </div>
 
                                 <div class="panel panel-default">
-                                    <div class="panel-heading">
-                                        <h4 class="panel-title">
-                                            <a data-toggle="collapse" data-parent="#skillsAccordeon" href="#trigger">Триггерные</a>
-                                        </h4>
-                                    </div>
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" data-parent="#skillsAccordeon" href="#trigger">
+                                            <div class="panel-heading">
+                                                Триггерные
+                                            </div>
+                                        </a>
+                                    </h4>
                                     <div id="trigger" class="panel-collapse collapse">
                                         <div class="panel-body">
                                             <table class="table table-striped">
@@ -100,11 +109,13 @@
             </div>
 
             <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#perks">Особенности</a>
-                    </h4>
-                </div>
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#perks">
+                        <div class="panel-heading">
+                            Особенности
+                        </div>
+                    </a>
+                </h4>
                 <div id="perks" class="panel-collapse collapse">
                     <div class="panel-body">
                         Особенности
@@ -113,11 +124,13 @@
             </div>
 
             <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#inventory">Инвентарь</a>
-                    </h4>
-                </div>
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#inventory">
+                        <div class="panel-heading">
+                            Инвентарь
+                        </div>
+                    </a>
+                </h4>
                 <div id="inventory" class="panel-collapse collapse">
                     <div class="panel-body">
                         Инвентарь
