--- a/public/views/attribute_manager.html
+++ b/public/views/attribute_manager.html
@@ -15,8 +15,7 @@
 <div ng-controller="attributeListController">
 
     <table class="table table-striped">
-        <tr ng-repeat="attribute in attributes | orderBy : 'id'">
-            <td style="vertical-align:middle;">{{ attribute.id }}</td>
+        <tr ng-repeat="attribute in attributes | orderBy : 'name'">
             <td style="vertical-align:middle;">{{ attribute.name }}</td>
             <td style="vertical-align:middle;">{{ attribute.action_level_bonus }}</td>
             <td><button type="button" class="btn btn-link" ng-click="deleteAttribute(attribute.id)">Удалить</button></td>
@@ -37,12 +36,12 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="action_level_bonus">Бонус на действия:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="action_level_bonus" placeholder="Бонус" ng-model="action_level_bonus" min="0">
+                <input type="text" class="form-control" id="action_level_bonus" placeholder="Бонус" ng-model="action_level_bonus">
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default" ng-click="createAttribite()"
+                <button type="submit" class="btn btn-default" ng-click="createAttribute()"
                         ng-disabled="createAttributeForm.$invalid">Добавить</button>
             </div>
         </div>
@@ -53,7 +52,7 @@
     var app = angular.module("attributeManagerApp", []);
 
     app.controller("addAttributeController", function ($scope, $http) {
-        $scope.createAttribite = function () {
+        $scope.createAttribute = function () {
             $http.post('/attributes', {name: $scope.attribute_name, action_level_bonus: $scope.action_level_bonus}).
             success(function (data) {
                 location.reload();
@@ -74,19 +73,6 @@
             });
         };
     });
-
-    app.directive('toNumber', function () {
-        return {
-            require: 'ngModel',
-            link: function (scope, elem, attrs, ctrl) {
-                ctrl.$parsers.push(function (value) {
-                    return parseFloat(value || '');
-                });
-            }
-        };
-    });
-
-
 </script>
 
 </body>
