--- a/public/views/main-menu.html
+++ b/public/views/main-menu.html
@@ -2,13 +2,14 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             <h4 class="panel-title">
-                <a data-toggle="collapse" href="#collapse1">Главное меню</a>
+                <a data-toggle="collapse" href="#main_menu">Главное меню</a>
             </h4>
         </div>
-        <div id="collapse1" class="panel-collapse collapse">
+        <div id="main_menu" class="panel-collapse collapse">
             <ul class="list-group">
                 <li class="list-group-item"><a href="/views/race_manager.html">Расы</a></li>
                 <li class="list-group-item"><a href="/views/attribute_manager.html">Аттрибуты</a></li>
+                <li class="list-group-item"><a href="/views/merit_manager.html">Достоинства</a></li>
                 <li class="list-group-item"><a href="/">Персонажи</a></li>
             </ul>
         </div>
