--- a/public/views/race.html
+++ b/public/views/race.html
@@ -12,10 +12,10 @@
 <body ng-app="raceApp">
 <div data-ng-include data-src="'main-menu.html'"></div>
 <div ng-controller="raceAttributeListController">
-    <h3 class="text-center">{{race.name}}</h3>
+    <h2 class="text-center">{{race.name}}</h2>
+    <h3 class="text-center">Аттрибуты</h3>
     <table class="table table-striped">
-        <tr ng-repeat="raceAttribute in raceAttributes | orderBy : 'id'">
-            <td style="vertical-align:middle;">{{ raceAttribute.id }}</td>
+        <tr ng-repeat="raceAttribute in raceAttributes | orderBy : 'name'">
             <td style="vertical-align:middle;">{{ raceAttribute.Attribute.name}}</td>
             <td style="vertical-align:middle;">{{ raceAttribute.base_cost }}</td>
             <td style="vertical-align:middle;">{{ raceAttribute.max_value }}</td>
@@ -63,6 +63,57 @@
     </form>
 </div>
 
+<div ng-controller="raceMeritListController">
+    <h3 class="text-center">Достоинства</h3>
+    <table class="table table-striped">
+        <tr ng-repeat="raceMerit in raceMerits | orderBy : 'name'">
+            <td style="vertical-align:middle;">{{ raceMerit.Merit.name}}</td>
+            <td style="vertical-align:middle;">{{ raceMerit.race_cost }}</td>
+            <td style="vertical-align:middle;">{{ raceMerit.race_default }}</td>
+            <td>
+                <a class="btn btn-link" ng-click="deleteRaceMerit(raceMerit.id)">Удалить</a>
+            </td>
+        </tr>
+    </table>
+</div>
+
+<div class="container">
+    <h2>Привязать достоинство</h2>
+    <form class="form-horizontal" role="form" ng-controller="addRaceMeritController"
+          name="addRaceMeritForm">
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="merit_id">Достоинство: </label>
+            <div class="col-sm-10">
+                <select class="form-control"
+                        ng-model="merit_id" id="merit_id" ng-options="merit.id as merit.name for merit in merits" required>
+                    <option style="display:none" value="">Выберите достоинство...</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="race_cost">Расовая стоимость:</label>
+            <div class="col-sm-10">
+                <input type="number" class="form-control" id="race_cost" placeholder="5" ng-model="race_cost" min="0" required>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="race_default">По умолчанию:</label>
+            <div class="col-sm-10">
+                <input type="checkbox" class="form-control" id="race_default" ng-model="race_default">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default" ng-click="createRaceMerit()"
+                        ng-disabled="addRaceMeritForm.$invalid">Привязать</button>
+            </div>
+        </div>
+    </form>
+</div>
+
 <script>
     var raceId = /id=(\d+)/.exec(window.location.href)[1];
     var app = angular.module("raceApp", []);
@@ -86,6 +137,20 @@
         };
     });
 
+    app.controller("raceMeritListController", function ($scope, $http) {
+        $http.get('/raceMerits').
+        success(function (data) {
+            $scope.raceMerits = data.raceMerits;
+        });
+
+        $scope.deleteRaceMerit = function (id) {
+            $http.delete('/raceMerits/' + id).
+            success(function (data) {
+                location.reload();
+            });
+        };
+    });
+
     app.controller("addRaceAttributeController", function ($scope, $http) {
         $scope.createRaceAttribute = function () {
             $http.post('/raceAttributes', {
@@ -102,6 +167,27 @@
         $http.get('/attributes').
         success(function (data) {
             $scope.attributes = data.attributes;
+        });
+    });
+
+    app.controller("addRaceMeritController", function ($scope, $http) {
+        $scope.race_default = false;
+
+        $scope.createRaceMerit = function () {
+            $http.post('/raceMerits', {
+                merit_id: $scope.merit_id,
+                race_id: raceId,
+                race_cost: $scope.race_cost,
+                race_default: $scope.race_default
+            }).
+            success(function (data) {
+                location.reload();
+            });
+        };
+
+        $http.get('/merits').
+        success(function (data) {
+            $scope.merits = data.merits;
         });
     });
 
