--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -304,7 +304,7 @@
     var app = angular.module("personageApp", []);
 
     app.controller("personageController", function ($scope, $http) {
-        $http.get('/personageAttributes').
+        $http.get('/personageAttributesByPersonageId/' + personageId).
         success(function (data) {
             $scope.personageAttributes = data.personageAttributes;
         });
