--- a/public/views/race.html
+++ b/public/views/race.html
@@ -119,7 +119,7 @@
     var app = angular.module("raceApp", []);
 
     app.controller("raceAttributeListController", function ($scope, $http) {
-        $http.get('/raceAttributes').
+        $http.get('/raceAttributesByRaceId/' + raceId).
         success(function (data) {
             $scope.raceAttributes = data.raceAttributes;
         });
@@ -138,7 +138,7 @@
     });
 
     app.controller("raceMeritListController", function ($scope, $http) {
-        $http.get('/raceMerits').
+        $http.get('/raceMeritsByRaceId/' + raceId).
         success(function (data) {
             $scope.raceMerits = data.raceMerits;
         });
